--- a/bootstrap/TinDog-Start/css/styles.css
+++ b/bootstrap/TinDog-Start/css/styles.css
@@ -14,7 +14,20 @@ body {
 }
 
 h1 {  
-    font-size: 3.5rem;  
+    font-size: 3rem;  
+    line-height: 1.5;  
+    font-weight: 900;
+}
+
+h2 {  
+    font-family: 'Montserrat';  
+    font-size: 2.5rem;  
+    line-height: 1.5;  
+    font-weight: 900;
+}
+
+h3 {  
+    font-size: 1.4rem;  
     line-height: 1.5;  
     font-weight: 900;
 }
@@ -28,11 +41,10 @@ h1 {
     font-family: 'Ubuntu';
     font-size: 2.5rem;  
     font-weight: 'bold';
-    
 }
 
 .nav-item {
-    padding: 0 18px
+    padding: 0 18px;
 }
 
 .nav-link {
@@ -46,7 +58,133 @@ h1 {
 }
 
 /* Title Image */
+
+.title-div {
+    position: relative;
+}
+
+.title-img-div {
+    position: absolute;
+}
+
 .title-img {
     width: 60%;
-    rotate: 25deg;
+    transform: rotate(25deg);
+    position: relative;
+    left: 120%;
+}
+
+/* features */
+.features-div {
+    background-color: white;
+    position: relative;
+}
+
+.values {
+    font-size: 0.9rem;  
+    text-align: center;
+}
+
+.fa-square-check {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+.fa-square-check:hover {
+    color: #ff4c68;
+}
+
+.fa-bullseye {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+.fa-bullseye:hover {
+    color: #ff4c68;
+}
+
+.fa-heart {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+.fa-heart:hover {
+    color: #ff4c68;
+}
+
+.values-par {
+    color: #8f8f8f;
+}
+
+/*testimonials*/
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
+}
+
+/* press */
+
+#press {
+    text-align: center;
+    background-color: #ef8172;
+}
+
+.press-image {
+    margin: 20px 20px 50px;
+    width: 15%;
+}
+
+
+/* pricing */
+#pricing {
+    padding: 100px;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+    text-align: center;
+}
+
+
+
+@media (max-width: 1000px) {
+    .title-div {
+        position: static;
+        text-align: center;
+    }
+
+    .title-img-div {
+        position: static;
+    }
+    .title-img {
+        position: static;
+        transform: rotate(0deg);
+    }
+}
+
+/* cta */
+#cta {
+    background-color: #ff4c68;
+    text-align: center;
+    color: white;
+    padding: 4% 15%;
+}
+
+/* footer */
+#footer {
+    text-align: center;
+    margin-top: 80px;
+}
+
+.footer-icons {
+    padding: 20px 8px;
 }
