--- a/bootstrap/TinDog-Start/css/styles.css
+++ b/bootstrap/TinDog-Start/css/styles.css
@@ -13,23 +13,24 @@ body {
     font-family: 'Montserrat';  
 }
 
+h1, h2, h3 {
+    font-family: 'Montserrat'; 
+    font-weight: 900; 
+}
+
 h1 {  
     font-size: 3rem;  
     line-height: 1.5;  
-    font-weight: 900;
 }
 
 h2 {  
-    font-family: 'Montserrat';  
     font-size: 2.5rem;  
     line-height: 1.5;  
-    font-weight: 900;
 }
 
 h3 {  
     font-size: 1.4rem;  
     line-height: 1.5;  
-    font-weight: 900;
 }
 
 /* Navigation Bar */
