update backend to be able to edit image after uploading

--- a/src/nextjs/ml-app/components/UI/Button.module.css
+++ b/src/nextjs/ml-app/components/UI/Button.module.css
@@ -1,16 +1,17 @@
 .button {
     font: inherit;
-    border: 1px solid #4f005f;
-    background: #4f005f;
-    color: white;
+    border: 1px solid #84142D;
+    background: #84142D;
+    color: #29C7AC;
     padding: 0.25rem 1rem;
     cursor: pointer;
+    border-radius: 15px;
   }
   
   .button:hover,
   .button:active {
-    background: #741188;
-    border-color: #741188;
+    background: #C02739;
+    border-color: #C02739;
   }
   
   .button:focus {
