--- a/src/nextjs/ml-app/styles/Home.module.css
+++ b/src/nextjs/ml-app/styles/Home.module.css
@@ -1,4 +1,10 @@
 
+/* TODO: hide this behind a re-usable file*/
+@value main-color: #4E6E81;
+@value secondary-color: #F9DBBB;
+@value tertiary-color: #FF0303;
+@value accent-color: #2E3840;
+
 .main {
   padding: 0rem;
   position : relative;
@@ -6,13 +12,13 @@
 
 .title {
   margin: auto;
-  color: ivory;
+  color: secondary-color;
   text-align: center;
   padding: 0.75rem;
-  background-color: #84142D;
+  background-color: accent-color;
   border-style: solid;
-  border-width: 0px 0px 3px 0px;
-  border-color: #29C7AC;
+  border-width: 0px 0px 1px 0px;
+  border-color: tertiary-color;
 }
 
 .image_viewer {
@@ -23,8 +29,14 @@
 
 .footer {
   position: absolute;
+  color: secondary-color;
   left: 50%;
   padding: 1rem;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%)
+}
+
+.footer_link {
+  color: tertiary-color;
+  text-decoration: none;
 }
